@@ -1,0 +1,7 @@
+Source: blah
+Maintainer: Joe Maintainer <joe@example.com>
+Homepage: https://rubygems.org/gems/fix-trinity-output/
+
+Package: blah
+Description: blah
+ blah blah
