@@ -1,3 +1,3 @@
-Avoid pypi.org in Homepage field.
+Avoid rubygems.org in Homepage field.
 Certainty: certain
 Fixed-Lintian-Tags: pypi-homepage
